feat: add tenants/search endpoint